@@ -1,10 +1,12 @@
 #ifndef ANIMATE_H
  #define ANIMATE_H
 
-#include "object.h"
+#include "item.h"
 
 class animate : public object
 {
+    protected:
+        std::vector<action *> actions;
     public: 
 
 };
