@@ -9,11 +9,21 @@ class container : public object
     public:
         container();
         ~container();
-        container(object *obj);
-        int add_item(object *obj);
-        int remove_item(int slot);
+        container(char *n, char *d, object *obj){
+            name = n;
+            desc = d;
+            contents.push_back(obj);
+        };
+        int add_item(object *obj){
+            contents.push_back(obj);
+            return 0;
+        };
+        int remove_item(int slot){
+            contents.erase(contents.begin() + slot);
+            return 0;
+        };
     protected:
-        std::vector <object> contents;
+        std::vector <object*> contents;
         int numobjects;
 };
 
