@@ -5,3 +5,4 @@
 (11/26) Game is too easy, going to try to make a game framework as a compromise
 (11/27) Idea for some sort of action system that will "link" actions with objects
 (11/27) Begin implementing all objects and helper methods
+(11/28) Need to figure out solution for actions issue. How to store necessary info and link actions to objects?
